# tix

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ticket-schema.md
src/tix/: __init__.py  __main__.py  mini.py  sync.py  tui.py
src/tix/templates/: _CHILD-TEMPLATE.md  _EPIC-TEMPLATE.md  _TEMPLATE.md
tests/: test_markdown.py  test_mini.py  test_smoke.py
tests/fixtures/tickets/: README.md
tests/fixtures/tickets/integrations/: alpha.md
tests/fixtures/tickets/spikes/: beta.md
