[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tix-cli"
version = "0.3.11"
description = "Keyboard-driven terminal ticket explorer for a tree of markdown briefs."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Henry Pye" }]
keywords = ["tui", "tickets", "curses", "markdown", "issue-tracker"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Terminals",
]
dependencies = []

[dependency-groups]
dev = ["pytest"]

[project.scripts]
tix = "tix.__main__:main"

[project.urls]
Homepage = "https://github.com/gitpancake/tix"
Repository = "https://github.com/gitpancake/tix"
Issues = "https://github.com/gitpancake/tix/issues"
Changelog = "https://github.com/gitpancake/tix/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tix"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
